--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,8 +21,7 @@ repos:
   rev: v0.11.0
   hooks:
     - id: markdownlint
-      # ignore line length of makrdownlint
-      args: [-r, ~MD013]
+      args: [-s, .markdownlint.rb]
 
 # ------------------------------------------------
 # check Terraform file
